--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
+  "scripts": {
+    "pretest": "./ensure-ganache-running.sh || (npm run start:testrpc &)",
+    "test": "npm run truffle:compile && mocha",
+    "test:truffle": "truffle test",
+    "truffle:compile": "truffle compile",
+    "start:testrpc": "ganache-cli -u 0 -s frontier-seed"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "eslint": "^4.13.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "ganache-cli": "^6.0.3",
+    "mocha": "^4.1.0",
+    "npm-watch": "^0.3.0",
+    "zeppelin-solidity": "1.3.0"
+  },
   "dependencies": {
     "eip777": "^0.0.3",
     "eip820": "^0.0.17",
     "giveth-common-contracts": "^0.5.0",
-    "truffle": "^4.0.6"
+    "truffle": "^4.0.6",
+    "truffle-hdwallet-provider": "0.0.3"
   }
 }
