--- a/package.json
+++ b/package.json
@@ -1,8 +1,54 @@
 {
+  "name": "validted-token",
+  "version": "1.0.0",
+  "description": "Smart contract validator reference implementation",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Finhaven/ValidatedToken.git"
+  },
+  "license": "Apache-2.0",
+  "scripts": {
+    "postinstall": "echo \"\n\n\n\ncontracts included in this project require compilation on a fresh checkout: npm run truffle:compile\n\n\n\n\"",
+    "pretest": "./ensure-ganache-running.sh || (npm run start:testrpc &)",
+    "test": "truffle test",
+    "test:lint": "eslint -c .eslintrc . --color=true --quiet",
+    "test:lint:fix": "eslint -c .eslintrc . --color=true --quiet --fix",
+    "truffle:compile": "truffle compile",
+    "start:testrpc": "ganache-cli -u 0 -s frontier-seed",
+    "watch": "npm-watch"
+  },
+  "watch": {
+    "test": "contracts/*,test/*",
+    "test:truffle": {
+      "patterns": [
+        "truffle"
+      ],
+      "extensions": "js,json,sol"
+    }
+  },
+  "bugs": {
+    "url": "https://github.com/Finhaven/ValidatedToken/issues"
+  },
+  "engines": {
+    "node": "8.4"
+  },
   "dependencies": {
     "eip777": "^0.0.3",
     "eip820": "^0.0.17",
     "giveth-common-contracts": "^0.5.0",
     "truffle": "^4.0.6"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "ganache-cli": "^6.1.0",
+    "mocha": "^5.0.5",
+    "npm-watch": "^0.3.0",
+    "solhint": "^1.1.10",
+    "solidity-coverage": "^0.4.14",
+    "truffle": "^4.1.3",
+    "zeppelin-solidity": "1.8.0"
   }
 }
