--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "validted-token",
+  "name": "validated-token",
   "version": "1.0.0",
   "description": "Smart contract validator reference implementation",
   "repository": {
