--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "eip777": "^0.0.3",
     "eip820": "^0.0.17",
-    "giveth-common-contracts": "^0.5.0"
+    "giveth-common-contracts": "^0.5.0",
+    "truffle-hdwallet-provider": "0.0.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -48,7 +49,6 @@
     "solhint": "^1.1.10",
     "solidity-coverage": "^0.4.14",
     "truffle": "^4.1.3",
-    "truffle-hdwallet-provider": "0.0.3",
     "zeppelin-solidity": "1.8.0"
   }
 }
