--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eip777": "^0.0.3",
     "eip820": "^0.0.17",
     "giveth-common-contracts": "^0.5.0",
+    "solc": "^0.4.21",
     "truffle-hdwallet-provider": "0.0.3"
   },
   "devDependencies": {
