--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eip777": "^0.0.3",
     "eip820": "^0.0.17",
     "giveth-common-contracts": "^0.5.0",
+    "solc": "^0.4.21",
     "truffle-hdwallet-provider": "0.0.3"
   },
   "devDependencies": {
@@ -48,7 +49,7 @@
     "npm-watch": "^0.3.0",
     "solhint": "^1.1.10",
     "solidity-coverage": "^0.4.14",
-    "truffle": "^4.1.3",
+    "truffle": "^4.1.5",
     "zeppelin-solidity": "1.8.0"
   }
 }
